# BreachLens

./: CHANGELOG.md  CONTRIBUTING.md  ETHICS.md  LICENSE  README.md  SECURITY.md  breachlens-demo.sh  breachlens-setup.sh  breachlens.sh  pyproject.toml  requirements.txt
breachlens/: cli.py  config.py  models.py  reports.py  scoring.py  utils.py
breachlens/modules/: __init__.py  crtsh.py  dnscheck.py  github.py  hibp.py  local_combos.py  local_indicators.py  passwords.py
docs/: COMMANDS.md  ROADMAP.md
examples/: sample_combos.txt  sample_indicators.txt
tests/: test_local_combos.py  test_local_indicators.py  test_passwords.py  test_scoring.py  test_utils.py
