[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breachlens"
version = "1.2.0"
description = "Defensive OSINT toolkit for credential exposure and external surface assessment."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lucas Neves" }]
license = { text = "MIT" }
keywords = [
  "osint",
  "threat-intelligence",
  "credential-exposure",
  "breach-monitoring",
  "cybersecurity",
  "defensive-security",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "httpx>=0.27.0",
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1",
  "dnspython>=2.6.1",
  "jinja2>=3.1.4",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
breachlens = "breachlens.cli:app"
exposurehunter = "breachlens.cli:app"
leakhunter = "breachlens.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["breachlens*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
